material.10-beta change md-form-field

--- a/client/warehouse-app/src/app/auth/login/login-view.component.html
+++ b/client/warehouse-app/src/app/auth/login/login-view.component.html
@@ -8,21 +8,21 @@
 			<div *ngIf="!tryingToLogIn" class="login-form-container" fxFlexFill>
 				<form (ngSubmit)="tryLogin($event)" fxLayout="column" fxLayoutAlign="end center" fxFlexFill>
 					<md-card-content fxLayout="column">
-						<md-input-container>
+						<md-form-field>
 							<input mdInput
 							placeholder="Username"
 							name="userName"
 							[(ngModel)]="user.username">
 							<md-hint *ngIf="signInError && signInError.length > 0" [ngStyle]="{'color': 'red'}" align="end">Invalid Username</md-hint>
-						</md-input-container>
-						<md-input-container >
+						</md-form-field>
+						<md-form-field>
 							<input mdInput
 							placeholder="Password"
 							name="password"
 							type="password"
 							[(ngModel)]="user.password">
 							<md-hint *ngIf="signInError && signInError.length > 0" [ngStyle]="{'color': 'red'}" align="end">Invalid Password</md-hint>
-						</md-input-container>
+						</md-form-field>
 					</md-card-content>
 					<md-card-actions class="button-row">
 						<button type="submit" md-raised-button color="primary">Zaloguj się!</button>
